# ChangeLog for media-sound/denemo
# Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/denemo/ChangeLog,v 1.25 2008/11/13 22:09:53 loki_val Exp $

*denemo-0.8.0 (13 Nov 2008)

  13 Nov 2008; Peter Alfredsen <loki_val@gentoo.org>
  +files/denemo-0.8.0-DESTDIR.patch, +denemo-0.8.0.ebuild:
  Bump, as per bug 241882, on request of drac.

  31 Jan 2008; Raúl Porcel <armin76@gentoo.org> denemo-0.7.7.ebuild:
  Re-add ~sparc wrt #207603

*denemo-0.7.7 (26 Jan 2008)

  26 Jan 2008; Alexis Ballier <aballier@gentoo.org> +denemo-0.7.7.ebuild:
  version bump, bug #207603

  13 Jan 2008; Alexis Ballier <aballier@gentoo.org> denemo-0.7.6.ebuild:
  add missing pkgconfig dep, bug #205673

  21 Aug 2007; Jurek Bartuszek <jurek@gentoo.org> denemo-0.7.6.ebuild:
  x86 stable (bug #189135)

  16 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> denemo-0.7.6.ebuild:
  Stable on sparc wrt #189135

*denemo-0.7.6 (25 Jul 2007)

  25 Jul 2007; Samuli Suominen <drac@gentoo.org> +denemo-0.7.6.ebuild:
  Version bump and install denemo.png to correct pixmaps directory.

  25 Oct 2006; Simon Stelling <blubb@gentoo.org> denemo-0.5.9.ebuild,
  denemo-0.7.2.ebuild:
  0.7.2 doesn't compile with gcc 4.1; 0.7.4 crashes right upon start; 0.7.5
  fails to play anything and has buggy keybindings -> back to ~amd64

  15 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> denemo-0.7.4.ebuild,
  denemo-0.7.5.ebuild:
  Added gnome-base/librsvg to RDEPEND, bug #146186.

  10 Oct 2006; Gustavo Zacarias <gustavoz@gentoo.org> denemo-0.7.4.ebuild:
  Stable on sparc wrt #146186

  08 Oct 2006; Andrej Kacian <ticho@gentoo.org> denemo-0.7.4.ebuild:
  Stable on x86, bug #146186.

*denemo-0.7.5 (07 Oct 2006)

  07 Oct 2006; MATSUU Takuto <matsuu@gentoo.org> +denemo-0.7.5.ebuild:
  Version bumped.

  07 Mar 2006; Diego Pettenò <flameeyes@gentoo.org> denemo-0.5.9.ebuild:
  Drop virtual/libc dependency.

*denemo-0.7.4 (02 Dec 2005)
