@@ -2,6 +2,6 @@ AUX denemo-0.8.0-DESTDIR.patch 602 RMD160 6a9c4f64f9c094446038b4785828462e67e21e
 DIST denemo-0.7.6.tar.gz 1947693 RMD160 2c3805fc9d608a4a9fcdc093f4a712423dd40169 SHA1 6cb41657052964e69235722cf789f32cd4a29b9b SHA256 b37aaa6b88235e705a8e3e9005bbceee002f156949fc76e6b71fe52c726f3e07
 DIST denemo-0.8.0.tar.gz 1943515 RMD160 bdfeab4b2a65f31cab9c2110f9af5311fd9a4388 SHA1 a8d55a9b53d8eb77e1f1f02c64c68dbe3bad4c3c SHA256 a1325901e516d29a720a91a8da1002301b0407a22d1eef06ee3184ed162c5f10
 EBUILD denemo-0.7.6.ebuild 1104 RMD160 e2332a5d154c3806ac282754c141d2509939c665 SHA1 6da38c7f0d5051e5d848f620f01c48d13ea1b65a SHA256 da796abbdecd82cc2acbf8c07e52ccf7711ca69a5812c7e70b67382e14e19022
-EBUILD denemo-0.8.0.ebuild 1234 RMD160 cb71e2c245f85a98516bb8abe2447f2aedeacf5e SHA1 46d2ac07e8e1927be8e7f67a29f16b7d7cd9e4ce SHA256 56a2cae595797ddbf5f0568b0ac573f9c9f5062d6714f37245c087fc5fac4dd0
-MISC ChangeLog 3326 RMD160 69d21bdee98b01c7f7e3d2edd8e8aa149b4aebc0 SHA1 0a37082d13f7d6ef1023ac399705f654e273728f SHA256 efd3d98100dd600ac8f0dd4ff08b39a1426f1dbc7a6c3bb016518d2ac2b8bf91
+EBUILD denemo-0.8.0.ebuild 1273 RMD160 799465cd85907e287829bb33942502f1bde75b11 SHA1 0f34e65edc585ae9c5f7626f701c3c3b4f0aa316 SHA256 ac108ddcf12dffe235305d604459ed88b7d1cb49498089c37cbff334360517b1
+MISC ChangeLog 3557 RMD160 51c9344ad9bcf8bd6a567a5e47ca859a6a559c40 SHA1 dd95e4a28807ce3b4623dc63cac327bfa42905b1 SHA256 30f6172bc5d9cc78f74ed54a1dba1fadd0c74e978435a2fdf3db5a87b5c7105d
 MISC metadata.xml 158 RMD160 6842e2189a50bd8a98e84802c38180ac1421c00e SHA1 703cea5a2109d41f7c87993c1f01d418a4c85174 SHA256 dfb5b47e6836db39fb187301dfcff1c2605e91d13d21db160806a563d8c75f9b
