@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/denemo
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/denemo/ChangeLog,v 1.25 2008/11/13 22:09:53 loki_val Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/denemo/ChangeLog,v 1.26 2008/12/04 19:39:51 ssuominen Exp $
+
+  04 Dec 2008; <ssuominen@gentoo.org> denemo-0.8.0.ebuild:
+  Missing dep. of dev-scheme/guile for bug 246760, thanks to Christopher
+  Robin Elmersson. Add pkg_postinst message about media-sound/timidity++
+  which seems optional.
 
 *denemo-0.8.0 (13 Nov 2008)
 
